--- a/contato.html
+++ b/contato.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
 </head>
 <body>
    <div class="header">
     <nav>
-        <img src="Imagens/logo1.png" alt="" class="logo">
+        <img src="logo1.png" alt="" class="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -19,26 +19,26 @@
     </nav>
     <div class="menu">
         <div class="opcao-menu">
-            <img src="imagens/facebook.jpg" alt="facebook">
+            <img src="facebook.jpg" alt="facebook">
             <div class="menu-opcoes">
                 <h4><span><a href="https://www.facebook.com/daniella.moreira.737?mibextid=ZbWKwL" target="_blank">Facebook</a></span></h4> 
             </div>
         </div>
         <div class="opcao-menu">
-            <img src="imagens/github.png" alt="github">
+            <img src="github.png" alt="github">
             <div class="menu-opcoes">
                 <h4><span><a href="https://github.com/Daniella2803" target="_blank">Github</a> </span></h4>
             </div>
         </div>
         <div class="opcao-menu">
-            <img src="imagens/instagram.jpg" alt="instagram">
+            <img src="instagram.jpg" alt="instagram">
             <div class="menu-opcoes">
                 <h4><span><a href="https://instagram.com/daniella.moreira.737?igshid=ZDdkNTZiNTM=" target="_blank">Instagram </a></span></h4>
                 
             </div>
         </div>
         <div class="opcao-menu">
-            <img src="imagens/linkedin.png" alt="linkedin">
+            <img src="linkedin.png" alt="linkedin">
             <div class="menu-opcoes">
                 <h4><span><a href="linkedin.com/in/daniella-moreira-88b338223" target="_blank">Linkedin</a></span></h4>
                 
