--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>Portfólio</title>
 </head>
 <body>
    <div class="header">
     <nav>
-        <img src="Imagens/logo1.png" alt="" class="logo">
+        <img src="logo1.png" alt="" class="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -25,8 +25,8 @@
         <a href="projeto.html">Projetos</a>
     </div>
     <div class="images">
-        <img src="Imagens/shappe.png" alt="logo" class="shape">
-        <img src="Imagens/dani.png" class="girl">
+        <img src="shappe.png" alt="logo" class="shape">
+        <img src="dani.png" class="girl">
         
     </div>
    </div>
