--- a/projeto.html
+++ b/projeto.html
@@ -16,7 +16,7 @@
 <body>
    <div class="header">
     <nav>
-        <img src="Imagens/logo1.png" alt="" class="logo">
+        <img src="logo1.png" alt="" class="logo">
         <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="contato.html">Contato</a></li>
@@ -24,8 +24,8 @@
         </ul>
     </nav>
     <main>
-        <img src="Imagens/acai.png" alt="">
-        <img src="Imagens/acai1.png" alt="">
+        <img src="acai.png" alt="">
+        <img src="acai1.png" alt="">
     </main>
     <footer>
         <p> &copy;Daniella Moreira</p>
